--- a/src/index.css
+++ b/src/index.css
@@ -22,23 +22,24 @@ h1 {
   text-transform: uppercase;
   border-bottom: 2px solid #dadada;
   padding-bottom: 10px;
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 h2 {
   text-align: left;
   text-transform: uppercase;
   font-weight: bolder;
-  margin-bottom: 2em;
-  padding: 5px;
+  margin-bottom: 0.2em;
   border-radius: 4px;
 }
 h2.audio {
   background: #8bc34a;
+  padding: 5px;
 }
 
 h2.video {
   background: #4aadc3;
+  padding: 5px;
 }
 
 h3 {
@@ -47,12 +48,66 @@ h3 {
 
 html {
   background: #F8F8F8;
+  overflow: hidden;
 }
 
 .panel {
-  padding: 1.5em;
+  padding: 1em;
   background: #f1f1f1;
   border: 1px solid #dadada;
   border-radius: 4px;
-  margin: 3em 0;
+  margin-bottom: 1em;
+}
+
+#drop {
+  background-color: #c0c0c0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#drop span {
+  padding: 2em 4em;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1.4em;
+  background-color: #595959;
+  border: 3px solid #818181;
+  color: white;
+  text-transform: uppercase;
+  box-shadow: 0px 0px 30px #ffffff;
+}
+
+#drop span:hover {
+  background: rgb(0, 124, 72);
+}
+
+#meta {
+  display: flex;
+}
+
+.metaPanel {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.metaPanel > div {
+  display: flex;
+  flex-direction: row;
+  row-gap: 10px;
+}
+
+.metaPanel div span:first-child {
+  flex: 2;
+  font-weight: bold;
+}
+
+.metaPanel div span:nth-child(2) {
+  flex: 4;
 }
